--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url=jdbc:h2:mem:jyo;
+spring.datasource.driver-class-name=org.h2.Driver
+ spring.datasource.username=sa
+ spring.datasource.password=anu
+ spring.h2.console.enabled=true
+server.port=9090
+spring.jpa.show-sql=true
+management.metrices.export.zipkin.enabled=true
+management.tracing.sampling.probability=1.0
